--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -43,6 +43,19 @@ a {
 }
 
 /* FOR HOME */
+a{
+  font-family: "aquire";
+  opacity: 0.8;
+  padding: 7px 30px;
+  background-color: rgb(185, 0, 0);
+  color: white;
+  float: right;
+}
+
+a:hover{
+  opacity: 1;
+}
+
 header{
   padding-left: 100px;
   text-align: center;
@@ -52,6 +65,8 @@ header h1{
   font-family: "aquire";
   font-size: 50px;
   padding-top: 100px;
+  padding-bottom: 30px;
+  margin: 0;
 }
 
 .container{
